[package]
name    = "forest_narwhal_cns"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2021"

[dependencies]
anyhow       = "1.0"
arc-swap     = { version = "1.5.1", features = ["serde"] }
async-std    = { version = "1.9", features = ["tokio1", "unstable"] }
async-trait  = "0.1"
futures      = "0.3.23"
log          = "0.4.8"
nonempty     = "0.8.0"
prometheus   = "0.13.1"
serde        = { version = "1.0", features = ["derive"] }
thiserror    = "1.0"
tokio        = { version = "1.0", features = ["sync"] }
tokio-stream = "0.1"
tonic        = "0.7"

cid               = { version = "0.8", default-features = false, features = ["std"] }
fvm_ipld_encoding = "0.2"
fvm_shared        = { version = "0.8.0", default-features = false }

forest_actor_interface = "0.1.0"
forest_blocks          = "0.1.0"
forest_chain           = "0.1.0"
forest_chain_sync      = "0.1.0"
forest_crypto          = "0.5"
forest_encoding        = "0.2.1"
forest_fil_types       = "0.2"
forest_interpreter     = "0.1.0"
forest_ipld_blockstore = "0.1"
forest_key_management  = "0.1.0"
forest_message         = "0.7.0"
forest_networks        = "0.1.0"
forest_state_manager   = "0.1.0"

# Using Narwhal after the merge of https://github.com/MystenLabs/narwhal/pull/818
mysten-network     = { git = "https://github.com/mystenlabs/mysten-infra.git", rev = "8d090689be14078f2ca41c356e7bbc0af21f73ab" }
narwhal_config     = { git = "https://github.com/MystenLabs/narwhal.git", rev = "030517045b183d7076174572d730ef76e4adea07", package = "config" }
narwhal_consensus  = { git = "https://github.com/MystenLabs/narwhal.git", rev = "030517045b183d7076174572d730ef76e4adea07", package = "consensus" }
narwhal_executor   = { git = "https://github.com/MystenLabs/narwhal.git", rev = "030517045b183d7076174572d730ef76e4adea07", package = "executor" }
narwhal_fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "a9e58305dc463c40b9d357730203406214909f04", package = "fastcrypto" }
narwhal_node       = { git = "https://github.com/MystenLabs/narwhal.git", rev = "030517045b183d7076174572d730ef76e4adea07", package = "node" }
narwhal_types      = { git = "https://github.com/MystenLabs/narwhal.git", rev = "030517045b183d7076174572d730ef76e4adea07", package = "types" }
